--- a/main/src/app/pages/file-manager/file-manager.component.css
+++ b/main/src/app/pages/file-manager/file-manager.component.css
@@ -29,32 +29,32 @@
 .full-container.icon-ex-sm
 {
   --icon-size:80px; /* Extra Small */
-  --icon-font-size:12px;
+  --icon-font-size:11px;
 }
 .full-container.icon-sm
 {
   --icon-size:100px; /* Small */
-  --icon-font-size:13px;
+  --icon-font-size:11px;
 }
 .full-container.icon-md
 {
   --icon-size:120px; /* Medium */
-  --icon-font-size:14px;
+  --icon-font-size:12px;
 }
 .full-container.icon-lg
 {
   --icon-size:140px; /* Large */
-  --icon-font-size:15px;
+  --icon-font-size:12px;
 }
 .full-container.icon-ex-lg
 {
   --icon-size:180px; /* Extra Large */
-  --icon-font-size:16px;
+  --icon-font-size:13px;
 }
 .full-container.icon-hg
 {
   --icon-size:220px; /* Huge */
-  --icon-font-size:18px;
+  --icon-font-size:14px;
 }
 .mini-scroll-bar::-webkit-scrollbar
 {
